tests/error/enum_errors/enum_struct_nested_recursive.py
from guppylang import guppy


@guppy.enum
class MyEnum:
    Variant1 = {"x": "tuple[MyStruct, int]"}


@guppy.struct
class MyStruct:
    field: "list[MyEnum]"


MyEnum.compile()
